--- a/unit_1/index.html
+++ b/unit_1/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>James Carroll</title>
+	<title>James Carroll's Website</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
