--- a/unit_4/index.html
+++ b/unit_4/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html>
-	<head>
+    <head>
+        <meta charset="UTF-8">
+        <title>James Carroll</title>
+        <link rel="stylesheet" type="text/css" href="css/style.css">
+        <!--[if lt IE 9]>
+            <script src="bower_components/html5shiv/dist/html5shiv.js"></script>
+        <![endif]-->
+    </head>
+    
 		<title>James Carroll</title>
 
 		<link rel="stylesheet" type="text/css" href="css/style.css">
