--- a/unit_8/index.html
+++ b/unit_8/index.html
@@ -22,17 +22,15 @@
 			</div>
 		</header>
 	
-	
-		<div class="clearfix" id="james">
-				<section class="jamestop">
+		<section class="jamestop">
 			<h2>Hi, I'm James.</h2>
 			<img src="images/JamesCircle.png" alt="An image of James" title= "James Carroll" class ="center">
 		</section>
 
 
 		<main>
-			<div class="clearfix" id="james">
-				<section class="jamesmain">
+		  <div class="clearfix" id="james-wrap">
+           <section class="james">
 				<p id="slogan">I am a dynamic, creative and detail-oriented 25 year old from Sydney, Australia; offering a passion for marketing.</>
 
 				<h3>What can I do?</h3>
